switched to internal css

--- a/index.html
+++ b/index.html
@@ -7,21 +7,40 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <style>
+        .banner-one{
+            display: block;
+            margin: auto;
+            width: 1320px;
+            height: 600px;
+            flex-shrink: 0;
+        }
+    </style>
 </head>
 <body>
 
     <header>
-        <h3>Happy New Year</h3>
+
+    <div>
+        <img class="banner-one" src="Banner Image.png" alt="intro banner">
+        <div>
+            <h3 class="banner-intro">Happy New Year</h3>
+            <h1 class="banner-sub">New Year Party Celebration</h1>
+        </div>
+
     </header>
 
     <main>
         
+        <div>
+            <h1 class="second-text">65% OFF</h1>
+        </div>
+
     </main>
 
     <footer>
 
     </footer>
-
 
 </body>
 </html>
