--- a/index.html
+++ b/index.html
@@ -7,26 +7,39 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&display=swap" rel="stylesheet">
+
     <style>
         .banner-one{
             display: block;
             margin: auto;
             width: 1320px;
             height: 600px;
+            padding: 50px 140px;
             flex-shrink: 0;
+            border-radius: 16px;
+            background-color: linear-gradient(180deg, #070211 0% rgba(7, 2, 17, 0.00)100%);
         }
+
     </style>
 </head>
 <body>
 
     <header>
 
-    <div>
+    <div class="part-one">
         <img class="banner-one" src="Banner Image.png" alt="intro banner">
         <div>
             <h3 class="banner-intro">Happy New Year</h3>
             <h1 class="banner-sub">New Year Party Celebration</h1>
         </div>
+    </div>
 
     </header>
 
