--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
 
     <div class="part-one">
-        <img src="Banner Image.png" class="pic-one">
+        <img src="Banner Image.png" alt="banner image" class="pic-one">
         <div>
             <h3 class="banner-intro">Happy New Year</h3>
             <h1 class="banner-sub">New Year Party Celebration</h1>
@@ -41,6 +41,14 @@
             <h1 class="info-one">65% OFF</h1>
             <h6 class="info-two">OUR HOLIDAY DEALS ARE BETTER</h6>
             <h2 class="info-three">ALL CATEGORIES</h2>
+        </div>
+
+        <div class="image-two">
+            <img src="New Year Photo.png" alt="happy new year Image">
+        </div>
+
+        <div>
+            
         </div>
 
     </main>
