new image added

--- a/index.html
+++ b/index.html
@@ -47,8 +47,14 @@
             <img src="New Year Photo.png" alt="happy new year Image">
         </div>
 
-        <div>
-            
+        <div class="part-three">
+
+            <img src="Vectorrr.png" alt="grp pic">
+
+            <div>
+                
+            </div>
+
         </div>
 
     </main>
