added some part

--- a/index.html
+++ b/index.html
@@ -49,10 +49,17 @@
 
         <div class="part-three">
 
-            <img src="Vectorrr.png" alt="grp pic">
+            <img src="Vectorrr.png" alt="grp pic"
+            class="photo-one">
 
-            <div>
-                
+            <div class="text-part">
+
+                <h1 class="text-one">Welcome to midnight party</h1>
+
+                <h5 class="text-two">Cheers to a new year filled with joy, laughter, and unforgettable moments! Let's welcome 20xx in style at our New Year's Eve bash!</h5>
+
+                <h3 class="text-three">Join Now</h3>
+
             </div>
 
         </div>
