fixed text alignment

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -64,6 +68,18 @@
 
                 <h3 class="text-three">Join Now</h3>
 
+            </div>
+
+        </div>
+
+        <div class="part-four">
+
+            <div>
+                <h4 class="line-one">THE BEST GIFTS</h4>
+
+                <h1 class="line-two">Our Awesome Portfolio</h1>
+
+                <h6>"Explore the latest trends and elevate your style with our curated collection of chic accessories. From statement jewelry to stylish handbags, discover the perfect finishing touches to enhance your shopping experience and showcase your unique fashion sense.</h6>
             </div>
 
         </div>
