fixed text positions

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 <h1 class="line-two">Our Awesome Portfolio</h1>
 
-                <h6>"Explore the latest trends and elevate your style with our curated collection of chic accessories. From statement jewelry to stylish handbags, discover the perfect finishing touches to enhance your shopping experience and showcase your unique fashion sense.</h6>
+                <h6 class="line-three">"Explore the latest trends and elevate your style with our curated collection of chic accessories. From statement jewelry to stylish handbags, discover the perfect finishing touches to enhance your shopping experience and showcase your unique fashion sense.</h6>
             </div>
 
         </div>
