small issue solved

--- a/index.html
+++ b/index.html
@@ -57,8 +57,15 @@
 
         <div class="part-three">
 
+        <div class="group-photo"> 
+            
             <img src="Vectorrr.png" alt="grp pic"
             class="photo-one">
+
+            <img src="Group 70.png"
+            class="small-pic">
+            
+        </div>
 
             <div class="text-part">
 
@@ -81,9 +88,26 @@
 
                 <h6 class="line-three">"Explore the latest trends and elevate your style with our curated collection of chic accessories. From statement jewelry to stylish handbags, discover the perfect finishing touches to enhance your shopping experience and showcase your unique fashion sense.</h6>
             </div>
+<!--
+        <div class="products">
+
+            <div>
+                <img src="Rectangle 3.png">
+
+                <img src="Rectangle 4.png">
+
+                <img src="Rectangle 5.png">
+
+                <img src="Rectangle 6.png">
+
+                <img src="Rectangle 7.png">
+
+                <img src="Rectangle 8.png">
+
+            </div>
 
         </div>
-
+-->
     </main>
 
     <footer>
