--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <img src="Group 70.png"
             class="small-pic">
-            
+
         </div>
 
             <div class="text-part">
@@ -88,26 +88,36 @@
 
                 <h6 class="line-three">"Explore the latest trends and elevate your style with our curated collection of chic accessories. From statement jewelry to stylish handbags, discover the perfect finishing touches to enhance your shopping experience and showcase your unique fashion sense.</h6>
             </div>
-<!--
+        </div>
+
         <div class="products">
 
-            <div>
+        <div class="row-one">
+            <div class="on">
                 <img src="Rectangle 3.png">
-
-                <img src="Rectangle 4.png">
-
-                <img src="Rectangle 5.png">
-
-                <img src="Rectangle 6.png">
-
-                <img src="Rectangle 7.png">
-
-                <img src="Rectangle 8.png">
-
             </div>
+            <div class="to">
+                <img src="Rectangle 4.png">
+            </div>
+            <div class="the">
+                <img src="Rectangle 5.png">
+            </div>
+        </div>
+<br>
+        <div class="row-two">
+            <div class="fo">
+                <img src="Rectangle 6.png">
+            </div>
+            <div class="fi">
+                <img src="Rectangle 7.png">
+            </div>
+            <div class="si">
+                <img src="Rectangle 8.png">
+            </div>
+        </div>
 
         </div>
--->
+
     </main>
 
     <footer>
