--- a/index.html
+++ b/index.html
@@ -118,6 +118,21 @@
 
         </div>
 
+        <div class="part-five">
+
+            <div class="mail">
+                <img src="Group 61.png" alt="mail image">
+            </div>
+
+            <div>
+                <h1 class="ek">Subscribe Newsletter</h1>
+
+                <h5 class="do">Stay updated with the latest news and offers. Join our mailing list for exclusive content delivered right to your inbox!</h5>
+            </div>
+
+        </div>
+
+
     </main>
 
     <footer>
