fifth step done

--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
 
         </div>
 
+        <div class="box">
+            <form>
+                <input class="square" type="email" name="email address" placeholder="user@gmail.com">
+                <button class="button" type="submit">Subscribe</button>
+            </form>
+        </div>
+
 
     </main>
 
